--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="img/Pin.png" alt="Ícone do mapa" style="width: 25px;">
       </a>
       <input type="search" id="addressInput" placeholder="Type the address...">
-      <button id="searchBtn">Buscar</button>
+      <button id="searchBtn">Search</button>
     </div>
   </header>
 
