--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <title>Mapa com Busca</title>
 </head>
+
 <body>
   <header>
-    <div>
+    <div class="search-container">
       <a href="#">
         <img src="img/Pin.png" alt="Ícone do mapa" style="width: 25px;">
       </a>
       <input type="search" id="addressInput" placeholder="Type the address...">
+      <input type="date" id="dateInput">
       <button id="searchBtn">Search</button>
     </div>
   </header>
@@ -23,6 +26,25 @@
       <p id="coords"></p>
     </div>
     <div class="side-panel">
+      <div class="info-card">
+        <h4>Temperatura</h4>
+        <p>24°C</p>
+      </div>
+
+      <div class="info-card">
+        <h4>Umidade</h4>
+        <p>60%</p>
+      </div>
+
+      <div class="info-card">
+        <h4>Velocidade do Vento</h4>
+        <p>15 km/h</p>
+      </div>
+
+      <div class="info-card">
+        <h4>Pressão Atmosférica</h4>
+        <p>1015 hPa</p>
+      </div>
       <p id="max-temp"></p>
       <p id="min-temp"></p>
       <input id="btn-temp" type="button" value="Pegar temperatura">
@@ -34,7 +56,8 @@
   <script src="js/script.js"></script>
 
   <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLVKZ_I2pPl9hpBaWGPGdiJpL-LZlmABg&libraries=places&callback=initMap"
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLVKZ_I2pPl9hpBaWGPGdiJpL-LZlmABg&libraries=places&language=en&callback=initMap"
     async defer></script>
 </body>
+
 </html>
