--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/style.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <title>Mapa com Busca</title>
+  <link rel="icon" type="image/png" href="img/favicon.ico" />
+  <title>Will It Rain On My Break?</title>
 </head>
 
 <body>
@@ -26,7 +27,7 @@
       <div id="map"></div>
       <p id="coords"></p>
 
-      <button id="backGraph" class="icon-btn" onclick="hideGrafico()">
+      <button id="backGraph" class="icon-btn">
         <img src="img/back-map.png" alt="Voltar" />
       </button>
 
